# web3-mcp

./: .codecov.yml  .env.devin  .gitignore  LICENSE  Makefile  README.md  hello.py  inspect_ankr_types.py  mypy.ini  pyproject.toml
.github/workflows/: publish.yml  test.yml
e2e_tests/: conftest.py  run_mock_tests.sh  run_stable_tests.py  run_tests.sh  test_mock.py  test_nft.py  test_query.py  test_token.py  utils.py
examples/: simple_server.py
src/web3_mcp/: __init__.py  __main__.py  __version__.py  auth.py  constants.py  server.py
src/web3_mcp/api/: __init__.py  nft.py  query.py  token.py
test_reports/: e2e_test_report.md  mock_tests_report.txt
tests/: __init__.py  test_init.py  test_server.py
